# python-project-medium

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  explanation.html  how-to-guides.html  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  reference.html  tutorials.html
.github/workflows/: lint.yml  orchestor.yml  pages.yml  release.yml  test.yml
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
search/: search_index.json
src/example_app/: app.py  service.py
tests/: test_app.py
