[tool.poetry]
name = "example_app"
version = "0.1.0"
description = ""
homepage = "https://github.com/philipbgm/python-project-medium.git"
repository = "https://github.com/philipbgm/python-project-medium.git"
license = "MIT"
authors = ["philipbgm <74136689+philipbgm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "example_app"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
